# robotics-sim-projects

3d-motion-planning/: README.md  motion_planning.py
docker/: Dockerfile  README.md  bashrc  run_docker_gpu.bash
ekf-launch/: README.md  main.launch
go-chase-it/: README.md
home-service-robot/: README.md
map-my-world/: README.md  test_mapping.sh
map-my-world/src/ball_chaser/src/: process_image.cpp
map-my-world/src/navigation_msgs/move_base_msgs/: package.xml
robot_algorithms_ws/src/fsm_pkg/: CMakeLists.txt  package.xml
robot_algorithms_ws/src/fsm_pkg/include/fsm_pkg/: fsm_node.hpp
robot_algorithms_ws/src/fsm_pkg/launch/: fsm.launch.py
robot_algorithms_ws/src/fsm_pkg/src/: main_fsm.cpp
robot_algorithms_ws/src/fsm_pkg/src/fsm_pkg/: fsm_node.cpp
robot_algorithms_ws/src/tf2/tf2_obstacle_detector_pkg/: CMakeLists.txt  package.xml
robot_algorithms_ws/src/tf2/tf2_obstacle_detector_pkg/include/obstacle_detector_pkg/: obstacle_detector_node.hpp  obstacle_monitor_node.hpp
robot_algorithms_ws/src/tf2/tf2_obstacle_detector_pkg/launch/: tf2_obstacle_detection.launch.py
robot_algorithms_ws/src/tf2/tf2_obstacle_detector_pkg/src/: main_detector.cpp
robot_algorithms_ws/src/tf2/tf2_obstacle_detector_pkg/src/obstacle_detector_pkg/: obstacle_detector_node.cpp  obstacle_monitor_node.cpp
robot_ws/: README.md
robot_ws/src/: README.md
robot_ws/src/mobile_manipulator_ws/install/: local_setup.sh  setup.sh
robot_ws/src/mobile_manipulator_ws/install/mobile_base_bringup/lib/mobile_base_bringup/: cpp_exe
robot_ws/src/mobile_manipulator_ws/install/mobile_base_bringup/share/mobile_base_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/src/mobile_manipulator_ws/install/mobile_base_description/share/mobile_base_description/: local_setup.sh  package.sh  package.xml
robot_ws/src/mobile_manipulator_ws/install/mobile_base_description/share/mobile_base_description/cmake/: mobile_base_descriptionConfig.cmake
robot_ws/src/mobile_manipulator_ws/install/mobile_base_description/share/mobile_base_description/meshes/: bumper.dae  bumper.stl  robot_base.stl  rplidar_a1.dae  rplidar_a1.stl  wheel.stl
robot_ws/src/mobile_manipulator_ws/install/mobile_base_description/share/mobile_base_description/urdf/: robot_base.urdf.urdf  robot_base.urdf.xacro  robot_base_essentials.xacro  robot_base_gazebo.xacro
robot_ws/src/mobile_manipulator_ws/install/mobile_base_gazebo/share/mobile_base_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/src/mobile_manipulator_ws/log/: latest_build
robot_ws/src/mobile_manipulator_ws/src/manipulator/manip_bringup/: CMakeLists.txt  package.xml
robot_ws/src/mobile_manipulator_ws/src/manipulator/manip_bringup/launch/: publish_robot_description.launch.py
robot_ws/src/mobile_manipulator_ws/src/manipulator/manip_description/: CMakeLists.txt  package.xml
robot_ws/src/mobile_manipulator_ws/src/manipulator/manip_description/urdf/: core.xacro  gripper.xacro  manip_essentials.xacro  manip_gazebo.xacro  manip_robot.urdf.urdf  manip_robot.urdf.xacro  sensors.xacro
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_bringup/: CMakeLists.txt
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_bringup/launch/: publish_robot_description.launch.py  rviz.launch.py
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_bringup/src/: cpp_node.cpp
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_description/: CMakeLists.txt
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_description/meshes/: lidar_case.stl  robot_base.dae  wheel.dae
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_description/urdf/: core.xacro
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_gazebo/: CMakeLists.txt
robot_ws/src/mobile_manipulator_ws/src/mobile_base/mobile_base_gazebo/launch/: mobile_base_sim.launch.py  spawn_robot.launch.py  spawn_robot_ros2.launch.xml
robotics-3d-motion-planning/: README.md  planning_utils.py
robotics-go-chase-it/: README.md  test_ball_chase.sh
robotics-go-chase-it/src/my_robot/rviz/: robot_model_chase.rviz
robotics-home-service-robot/: README.md
robotics-map-my-world/: README.md  frames.gv
robotics-map-my-world/src/ball_chaser/: CMakeLists.txt
robotics-map-my-world/src/my_robot/launch/: world.launch
robotics-map-my-world/src/my_robot/rviz/: robot_model_mapping_conf.rviz
robotics-where-am-i/: README.md
robotics-where-am-i/src/my_robot/urdf/: my_robot.xacro
robotics-where-am-i/src/pgm_map_creator/world/: Office.world
robotics-where-am-i/src/teleop_twist_keyboard/: teleop_twist_keyboard.py
turtlebot-home-service-robot/: README.md
where-am-i/: README.md
where-am-i/src/ball_chaser/src/: drive_bot.cpp
(+7 files in other folders)
